--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # tmux起動時のシェルをzshにする
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /bin/zsh
+set-option -g default-command "/bin/zsh -l"
 
 # tmuxを256色表示できるようにする
 set -g default-terminal "tmux-256color"
