--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ set-option -g status-position top
 
 # Wi-Fi、バッテリー残量、現在時刻
 # 最右に表示
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
 
 # vimode
 set-window-option -g mode-keys vi
@@ -40,6 +40,8 @@ setw -g pane-base-index 1
 # センタライズ（主にウィンドウ番号など）
 set-option -g status-justify centre
 
+# ウィンドウ番号を詰める
+set -g renumber-windows on
 
 # status line を更新する間隔を 1 秒にする
 set-option -g status-interval 1
@@ -47,6 +49,8 @@ set-option -g status-interval 1
 # status-right の最大の長さを指定する。
 set-option -g status-right-length 60
 
+# スクロールバック履歴を大幅に増加
+set -g history-limit 50000
 
 # vimのキーバインドでペインを移動する
 bind h select-pane -L
