--- a/tmux.conf
+++ b/tmux.conf
@@ -79,11 +79,17 @@ set-option -g status-bg "colour238"
 set-option -g status-fg "colour255"
 
 # Default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set -g window-status-style fg=colour244,bg=default,dim
 
 # Active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+set -g window-status-current-style fg=colour166,bg=default,bright
+
+# Default window title colors
+#set-window-option -g window-status-fg colour244 #base0
+#set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# Active window title colors
+#set-window-option -g window-status-current-fg colour166 #orange
+#set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
