refactor: コメントを修正

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,9 +9,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # キーストロークのディレイを減らす
 set -sg escape-time 1
 
-
-
-# prefixキーをC-aに変更する
+# prefixキーをC-qに変更する
 set -g prefix C-q
 
 # C-bのキーバインドを解除する
@@ -20,8 +18,7 @@ unbind C-b
 # ステータスバーをトップに配置する
 set-option -g status-position top
 
-# Wi-Fi、バッテリー残量、現在時刻
-# 最右に表示
+# 最右に現在時刻を表示
 set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
 
 # vimode
